# models

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: train_ministral.py
finetuning/: __init__.py  base_trainer.py  config.py  settings.py
models/: __init__.py  ministral_3_vl.py
scripts/: train_ministral_3_vl.sh
unsloth_ft/: .gitignore  pyproject.toml
unsloth_ft/config/: keys.py
unsloth_ft/ftlogger/: _setup.py
unsloth_ft/logging/: __init__.py
unsloth_ft/models/: gemma_4_31b.py  glm_4_7_flash.py  qwen3_5_vision.py  qwen_3_5_4B.py  train_glm_4_7_flash.sh  train_qwen3_5_4b_v.sh
unsloth_ft/models/glm_4_7_flash/: main.py  train_glm_4_7_flash.sh
unsloth_ft/models/qwen_3_5_4B_vision/: main.py  train_qwen3_5_4b_v.sh
unsloth_ft/slurm/: train_gemma_4_31b.sh  train_glm_4_7_flash.sh  train_qwen3_5_4b_v.sh
unsloth_ft/wandb/: latest-run
unsloth_ft/wandb/run-20260310_170510-yyqor0ar/: run-yyqor0ar.wandb
unsloth_ft/wandb/run-20260310_170510-yyqor0ar/files/: config.yaml  requirements.txt  wandb-metadata.json
unsloth_ft/wandb/run-20260310_170837-bt4k4gb6/: run-bt4k4gb6.wandb
unsloth_ft/wandb/run-20260310_170837-bt4k4gb6/files/: config.yaml  wandb-metadata.json
