[project]
name = "fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "unsloth-zoo[base]>=2026.1.4",
    "unsloth[base]>=2026.1.4",
    "trl>=0.24.0",
    "wandb>=0.23.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finetuning", "models"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]
