[project]
name = "fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "wandb>=0.23.1",
    "wheel>=0.45.1",
    "ninja>=1.13.0",
    "hatchling>=1.28.0",
    "setuptools>=80.10.2",
    "editables>=0.5",
    "torch==2.8.0",
    "axolotl[deepspeed,flash-attn]>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finetuning", "models"]

[tool.uv.extra-build-dependencies]
fine-tuning = ["editables"]


[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]
