[project]
name = "unsloth_ft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.11.0",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "tensorboard>=2.20.0",
    "unsloth>=2026.3.4",
    "wandb>=0.25.0",
]
