[project]
name = "unsloth_ft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.11.0",
    "jupyterlab>=4.5.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "tensorboard>=2.20.0",
    "unsloth>=2026.3.4",
    "wandb>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "config",
    "models",
]
