[project]
name = "unsloth_ft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.2",
    "ipython>=9.11.0",
    "jupyterlab>=4.5.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "tensorboard>=2.20.0",
    "torch==2.8.0",
    "torchvision>=0.23.0",
    "triton>=3.3.0",
    "unsloth[base]>=2026.3.4",
    "unsloth-zoo[base]",
    "wandb>=0.25.0",
    "xformers==0.0.32.post2",
    "transformers==5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "config",
    "models",
]

[tool.uv.sources]
unsloth-zoo = { git = "https://github.com/unslothai/unsloth-zoo" }
unsloth = { git = "https://github.com/unslothai/unsloth" }
